Small fixes & fix image not showing correctly on chrome

--- a/styles/Hero.module.scss
+++ b/styles/Hero.module.scss
@@ -7,7 +7,7 @@
 
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 1fr 0.3fr;
+  grid-template-rows: 1.2fr 0.3fr;
   gap: 1rem;
 
   .hero__content {
@@ -39,7 +39,6 @@
 
 @media screen and (min-width: $break-desktop) {
   .main__hero {
-    flex-grow: 1;
     gap: 3rem;
     height: calc(100vh - 4rem);
 
